--- a/src/styles/pages/dashboard/_dashboard-page.scss
+++ b/src/styles/pages/dashboard/_dashboard-page.scss
@@ -100,14 +100,24 @@
   padding: 1rem;
   background-color: #fff;
   @include media-in(tablet) {
-    width: 30rem;
+    width: 50rem;
   }
+}
+
+.section-history {
+  margin: 1rem;
 }
 
 .iconTransaksi {
   text-align: center;
   align-content: center;
+  align-self: center;
   object-fit: cover;
+  width: 5rem;
+
+  @include media-in(tablet) {
+    width: 7rem;
+  }
 }
 .list-riwayat {
   .headerTransaksi {
@@ -130,4 +140,15 @@
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   width: 100%;
+}
+
+h5-upsize {
+  font-size: 1.3rem;
+}
+
+.item {
+  &:focus {
+    // background-color: $primary-color;
+    border: 2px solid $primary-color;
+  }
 }
