fix bug styling responsive

--- a/src/styles/pages/profile/_profile.scss
+++ b/src/styles/pages/profile/_profile.scss
@@ -98,6 +98,7 @@ body {
     font-size: 1.2rem;
     font-weight: bold;
     background-color: transparent;
+    color: white;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -171,7 +172,7 @@ body {
     background-color: $primary-color;
     border-radius: 50%;
     border: 0;
-    margin-top: 1rem;
+    color: white;
 
     p {
       margin: 0;
