adding loading element (spinner) when request to server

--- a/src/styles/components/_chooseMonth.scss
+++ b/src/styles/components/_chooseMonth.scss
@@ -4,7 +4,7 @@
 
 .month .box-month {
   box-shadow: -10px -5px 40px 0 rgba(0, 0, 0, 0.1);
-  padding: 30px;
+  padding: 1.5rem 1rem;
   text-align: left;
   border-radius: 10px;
   width: 100%;
