--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 @import 'components/btnAddTransaction';
 @import 'components/kategoriList';
 @import 'components/chooseMonth';
+@import 'components/spinner';
 
 * {
   padding: 0;
