--- a/src/styles/pages/loginRegister/_login-register.scss
+++ b/src/styles/pages/loginRegister/_login-register.scss
@@ -22,6 +22,13 @@ form {
  width: 70%;
  justify-content: center;
  margin: 0 auto;
+ .togglePassword {
+  height: 100%;
+  cursor: pointer;
+  i {
+    font-size: 2rem;
+   }
+ }
 }
 
 .button-filled {
@@ -89,7 +96,7 @@ form {
  }
  .h-custom .form-control-login-register {
   margin-left: 0px;
-  padding-left: 20px;
+  // padding-left: 20px;
   margin-right:5px;
   width: 100%;
  }
