improvement styling button color for all page

--- a/src/styles/pages/profile/_profile.scss
+++ b/src/styles/pages/profile/_profile.scss
@@ -248,7 +248,7 @@ body {
 
 .btn-icon-delete:disabled {
   background-color: #7b7b7b;
-  .text-danger {
+  .color-danger {
     color: #000000 !important;
   }
 }
