--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,3 +21,9 @@
 <body id="body-pd" tabindex="0"></body>
 
 </html>
+
+<picture>
+  <source type="image/webp" srcset="${CONFIG.IMAGE_HERO_LANDING_PATH}.webp">
+  <source type="image/png" srcset="${CONFIG.IMAGE_HERO_LANDING_PATH}.png">
+  <img src="${CONFIG.IMAGE_HERO_LANDING_PATH}.png" class="img-fluid" alt="Ilustrasi mengatur keuangan dengan maneyfy">
+</picture>
