fix bug in index.html

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,7 +8,7 @@
   <meta name="Description" content="Maneyfy, Manage your Money Easily">
 
   <title>Maneyfy | Manage your Money Easily</title>
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="./app.webmanifest">
 
   <!-- IMPORT ICON -->
   <link rel="preload" as="style" onload="this.rel = 'stylesheet'"
@@ -21,9 +21,3 @@
 <body id="body-pd" tabindex="0"></body>
 
 </html>
-
-<picture>
-  <source type="image/webp" srcset="${CONFIG.IMAGE_HERO_LANDING_PATH}.webp">
-  <source type="image/png" srcset="${CONFIG.IMAGE_HERO_LANDING_PATH}.png">
-  <img src="${CONFIG.IMAGE_HERO_LANDING_PATH}.png" class="img-fluid" alt="Ilustrasi mengatur keuangan dengan maneyfy">
-</picture>
