--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Description" content="Maneyfy, Manage your Money Easily">
+  <meta name="dicoding:email" content="tegarnaufalh1@gmail.com">
 
   <title>Maneyfy | Manage your Money Easily</title>
   <link rel="manifest" href="./app.webmanifest">
